@@ -7,6 +7,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ## [2.7.1] - 2023-06-07
 ###  Fixed
 - [FRONTEND] resolve a bug that prevented users to modify a Listener existing before 2.7.0
+- [API_PARSER] Remove useless default values for Cisco DUO fields
 
 
 ## [2.7.0] - 2023-05-24
